--- a/.github/workflows/deploy-aws-docker-compose.yml
+++ b/.github/workflows/deploy-aws-docker-compose.yml
@@ -49,6 +49,7 @@ jobs:
           echo BRANCH_NAME=${{ github.event.inputs.branchName }} >> docker-deploy-config.cfg
           echo AWS_KEY_PAIR_NAME=${{ github.event.inputs.keyName }} >> docker-deploy-config.cfg
           echo DEFAULT_EC2_INSTANCE_TYPE=t2.xlarge >> docker-deploy-config.cfg
+          echo CLI_PROFILE=default >> docker-deploy-config.cfg
           cat docker-deploy-config.cfg
 
       - name: Create stack and run playbook
