--- a/.github/workflows/deploy-aws-docker-compose.yml
+++ b/.github/workflows/deploy-aws-docker-compose.yml
@@ -41,6 +41,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+          role-session-name: joystream-user
 
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
@@ -57,7 +58,7 @@ jobs:
           echo BRANCH_NAME=${{ github.event.inputs.branchName }} >> docker-deploy-config.cfg
           echo AWS_KEY_PAIR_NAME=${{ github.event.inputs.keyName }} >> docker-deploy-config.cfg
           echo DEFAULT_EC2_INSTANCE_TYPE=t2.xlarge >> docker-deploy-config.cfg
-          echo CLI_PROFILE=default >> docker-deploy-config.cfg
+          echo CLI_PROFILE=joystream-user >> docker-deploy-config.cfg
           echo KEY_PATH=~/.ssh/id_rsa >> docker-deploy-config.cfg
           cat docker-deploy-config.cfg
 
