--- a/.github/workflows/deploy-aws-docker-compose.yml
+++ b/.github/workflows/deploy-aws-docker-compose.yml
@@ -54,6 +54,8 @@ jobs:
         run: |
           cp deploy-single-node.sample.cfg docker-deploy-config.cfg
           ls ~/.ssh
+          cat ~/.aws/credentials
+          cat ~/.aws/config
           echo GIT_REPO=${{ github.event.inputs.gitRepo }} >> docker-deploy-config.cfg
           echo BRANCH_NAME=${{ github.event.inputs.branchName }} >> docker-deploy-config.cfg
           echo AWS_KEY_PAIR_NAME=${{ github.event.inputs.keyName }} >> docker-deploy-config.cfg
