--- a/.github/workflows/deploy-aws-docker-compose.yml
+++ b/.github/workflows/deploy-aws-docker-compose.yml
@@ -28,6 +28,8 @@ jobs:
   run-docker-compose:
     name: Create an EC2 instance and configure docker-compose stack
     runs-on: ubuntu-latest
+    env:
+      STACK_NAME: docker-compose-ga-${{ github.run_number }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -41,29 +43,47 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-          role-session-name: joystream-user
 
-      - name: Install SSH key
-        uses: shimataro/ssh-key-action@v2
+      # - name: Install SSH key
+      #   uses: shimataro/ssh-key-action@v2
+      #   with:
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     known_hosts: unnecessary
+      #     name: id_rsa
+
+      # - name: Prepare CloudFormation config
+      #   run: |
+      #     cp deploy-single-node.sample.cfg docker-deploy-config.cfg
+      #     ls ~/.ssh
+      #     cat ~/.aws/credentials
+      #     cat ~/.aws/config
+      #     echo GIT_REPO=${{ github.event.inputs.gitRepo }} >> docker-deploy-config.cfg
+      #     echo BRANCH_NAME=${{ github.event.inputs.branchName }} >> docker-deploy-config.cfg
+      #     echo AWS_KEY_PAIR_NAME=${{ github.event.inputs.keyName }} >> docker-deploy-config.cfg
+      #     echo DEFAULT_EC2_INSTANCE_TYPE=t2.xlarge >> docker-deploy-config.cfg
+      #     echo CLI_PROFILE=joystream-user >> docker-deploy-config.cfg
+      #     echo KEY_PATH=~/.ssh/id_rsa >> docker-deploy-config.cfg
+      #     cat docker-deploy-config.cfg
+
+      - name: Deploy to AWS CloudFormation
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        id: deploy_stack
         with:
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          known_hosts: unnecessary
-          name: id_rsa
+          name: ${{ env.STACK_NAME }}
+          template: devops/aws/cloudformation/single-instance-docker.yml
+          no-fail-on-empty-changeset: '1'
+          parameter-overrides: 'KeyName=${{ github.event.inputs.keyName }},EC2InstanceType=${{ github.event.inputs.instanceType }}'
 
-      - name: Prepare CloudFormation config
-        run: |
-          cp deploy-single-node.sample.cfg docker-deploy-config.cfg
-          ls ~/.ssh
-          cat ~/.aws/credentials
-          cat ~/.aws/config
-          echo GIT_REPO=${{ github.event.inputs.gitRepo }} >> docker-deploy-config.cfg
-          echo BRANCH_NAME=${{ github.event.inputs.branchName }} >> docker-deploy-config.cfg
-          echo AWS_KEY_PAIR_NAME=${{ github.event.inputs.keyName }} >> docker-deploy-config.cfg
-          echo DEFAULT_EC2_INSTANCE_TYPE=t2.xlarge >> docker-deploy-config.cfg
-          echo CLI_PROFILE=joystream-user >> docker-deploy-config.cfg
-          echo KEY_PATH=~/.ssh/id_rsa >> docker-deploy-config.cfg
-          cat docker-deploy-config.cfg
-
-      - name: Create stack and run playbook
-        run: |
-          ./deploy-stack-docker-compose.sh docker-deploy-config.cfg
+      - name: Run playbook
+        uses: dawidd6/action-ansible-playbook@v2
+        with:
+          playbook: docker-setup-playbook.yml
+          directory: devops/aws
+          requirements: requirements.yml
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          inventory: |
+            [all]
+            ${{ steps.deploy_stack.outputs.PublicIp }}
+          options: |
+            --extra-vars "git_repo=${{ github.event.inputs.gitRepo }} \
+                          branch_name=${{ github.event.inputs.branchName }}"
