--- a/.github/workflows/deploy-node-network.yml
+++ b/.github/workflows/deploy-node-network.yml
@@ -14,7 +14,7 @@ on:
       keyName:
         description: 'SSH key pair on AWS'
         required: false
-        default: 'joystream-github-action-key'
+        default: 'anuj-key'
       numberOfValidators:
         description: 'Number of validators to deploy'
         required: false
@@ -22,7 +22,7 @@ on:
       validatorInstanceType:
         description: 'AWS EC2 instance type for Validators (t2.micro, t2.large)'
         required: false
-        default: 't2.micro'
+        default: 't2.large'
       buildInstanceType:
         description: 'AWS EC2 instance type for Build Instance (t2.micro, t2.large)'
         required: false
@@ -30,7 +30,7 @@ on:
       rpcInstanceType:
         description: 'AWS EC2 instance type for Validators (t2.micro, t2.large)'
         required: false
-        default: 't2.micro'
+        default: 't2.large'
       ec2AMI:
         description: 'Pre-built AMI ID'
         required: false
@@ -83,9 +83,22 @@ jobs:
 
       - name: Prepare inventory
         run: |
-          echo -e "[build]\n${{ steps.deploy_stack.outputs.PublicIp }}\n" > inventory
-          echo -e "[validators]\n$VALIDATORS\n" > inventory
-          echo -e "[rpc]\n$RPC_NODES" > inventory
+          ASG=${{ steps.deploy_stack.outputs.AutoScalingGroup }}
+
+          VALIDATORS=""
+
+          INSTANCES=$(aws autoscaling describe-auto-scaling-instances \
+            --query "AutoScalingInstances[?AutoScalingGroupName=='${ASG}'].InstanceId" --output text);
+
+          for ID in $INSTANCES
+          do
+            IP=$(aws ec2 describe-instances --instance-ids $ID --query "Reservations[].Instances[].PublicIpAddress" --output text)
+            VALIDATORS+="$IP\n"
+          done
+
+          echo -e "[build]\n${{ steps.deploy_stack.outputs.BuildPublicIp }}\n" >> inventory
+          echo -e "[validators]\n$VALIDATORS\n" >> inventory
+          echo -e "[rpc]\n$${{ steps.deploy_stack.outputs.RPCPublicIp }}RPC_NODES" >> inventory
           cat inventory
 
       # - name: Run playbook
