--- a/.github/workflows/deploy-node-network.yml
+++ b/.github/workflows/deploy-node-network.yml
@@ -64,46 +64,39 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      # - name: Run deploy-infra
-      #   run: |
-      #     echo "Running deploy-infra"
-      #     cp deploy-infra.sample.cfg deploy-infra.cfg
-      #     echo EC2_AMI_ID="ami-0090c9c49dc765fbb" >> deploy-infra.cfg
-
-      # - name: Deploy to AWS CloudFormation
-      #   uses: aws-actions/aws-cloudformation-github-deploy@v1
-      #   id: deploy_stack
-      #   with:
-      #     name: ${{ env.STACK_NAME }}
-      #     template: devops/aws/cloudformation/infrastructure.yml
-      #     no-fail-on-empty-changeset: '1'
-      #     parameter-overrides: >-
-      #       KeyName=${{ github.event.inputs.keyName }},
-      #       ValidatorEC2InstanceType=${{ github.event.inputs.validatorInstanceType }},
-      #       RPCEC2InstanceType=${{ github.event.inputs.rpcInstanceType }},
-      #       BuildEC2InstanceType=${{ github.event.inputs.buildInstanceType }},
-      #       EC2AMI=${{ github.event.inputs.ec2AMI }},
-      #       NumberOfValidators=${{ github.event.inputs.numberOfValidators }}
+      - name: Deploy to AWS CloudFormation
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        id: deploy_stack
+        with:
+          name: ${{ env.STACK_NAME }}
+          template: devops/aws/cloudformation/infrastructure.yml
+          no-fail-on-empty-changeset: '1'
+          parameter-overrides: >-
+            KeyName=${{ github.event.inputs.keyName }},
+            ValidatorEC2InstanceType=${{ github.event.inputs.validatorInstanceType }},
+            RPCEC2InstanceType=${{ github.event.inputs.rpcInstanceType }},
+            BuildEC2InstanceType=${{ github.event.inputs.buildInstanceType }},
+            EC2AMI=${{ github.event.inputs.ec2AMI }},
+            NumberOfValidators=${{ github.event.inputs.numberOfValidators }}
 
       - name: Prepare inventory for Ansible
         run: |
-          # ASG=${{ steps.deploy_stack.outputs.AutoScalingId }}
+          ASG=${{ steps.deploy_stack.outputs.AutoScalingId }}
 
-          # VALIDATORS=""
+          VALIDATORS=""
 
-          # INSTANCES=$(aws autoscaling describe-auto-scaling-instances \
-          #   --query "AutoScalingInstances[?AutoScalingGroupName=='${ASG}'].InstanceId" --output text);
+          INSTANCES=$(aws autoscaling describe-auto-scaling-instances \
+            --query "AutoScalingInstances[?AutoScalingGroupName=='${ASG}'].InstanceId" --output text);
 
-          # for ID in $INSTANCES
-          # do
-          #   IP=$(aws ec2 describe-instances --instance-ids $ID --query "Reservations[].Instances[].PublicIpAddress" --output text)
-          #   VALIDATORS+="$IP\n"
-          # done
+          for ID in $INSTANCES
+          do
+            IP=$(aws ec2 describe-instances --instance-ids $ID --query "Reservations[].Instances[].PublicIpAddress" --output text)
+            VALIDATORS+="$IP\n"
+          done
 
-          # echo -e "[build]\n${{ steps.deploy_stack.outputs.BuildPublicIp }}\n" >> inventory
-          # echo -e "[validators]\n$VALIDATORS" >> inventory
-          # echo -e "[rpc]\n${{ steps.deploy_stack.outputs.RPCPublicIp }}" >> inventory
-          echo -e "[build]\n3.84.31.161\n\n[validators]\n44.201.23.255\n44.200.180.106\n\n[rpc]\n54.234.126.167" >> inventory
+          echo -e "[build]\n${{ steps.deploy_stack.outputs.BuildPublicIp }}\n" >> inventory
+          echo -e "[validators]\n$VALIDATORS" >> inventory
+          echo -e "[rpc]\n${{ steps.deploy_stack.outputs.RPCPublicIp }}" >> inventory
           cat inventory
 
       - name: Run playbook to compile joystream-node on build server
@@ -142,6 +135,7 @@ jobs:
             --extra-vars "network_suffix=${{ github.event.inputs.networkSuffix }} data_path=mydata \
                           number_of_validators=${{ github.event.inputs.numberOfValidators }} \
                           git_repo=${{ github.event.inputs.gitRepo }} deployment_type=live \
+                          bucket_name=${{ steps.deploy_stack.outputs.S3BucketName }} \
                           branch_name=${{ github.event.inputs.branchName }}"
 
       - name: Save the output as an artifact
@@ -150,11 +144,16 @@ jobs:
           name: data-chainspec-auth
           path: devops/aws/mydata
 
-      # initial_members_file= initial_balances_file= \
+      - name: Print output URL's
+        run: |
+          echo -e "Pioneer URL: https://${{ steps.deploy_stack.outputs.DomainName }}"
+          echo -e "RPC: https://${{ steps.deploy_stack.outputs.RPCPublicIp }}.nip.io/ws-rpc"
 
       - name: Delete CloudFormation Stack if any step failed
         if: failure()
         run: |
+          echo "Empty the bucket"
+          aws s3 rm s3://${{ steps.deploy_stack.outputs.S3BucketName }} --recursive || echo "No bucket"
           echo "Deleting ${{ env.STACK_NAME }} stack"
           aws cloudformation delete-stack --stack-name ${{ env.STACK_NAME }}
           echo "Waiting for ${{ env.STACK_NAME }} to be deleted..."
