--- a/.github/workflows/deploy-node-network.yml
+++ b/.github/workflows/deploy-node-network.yml
@@ -35,8 +35,22 @@ jobs:
           echo ::set-output name=rpcInstanceType::$(echo $jsonInput | jq -r '.rpcInstanceType.value')
           echo ::set-output name=ec2AMI::$(echo $jsonInput | jq -r '.ec2AMI.value')
           echo ::set-output name=networkSuffix::$(echo $jsonInput | jq -r '.networkSuffix.value')
-          echo ::set-output name=initialBalancesFile::$(echo $jsonInput | jq -r '.initialBalancesFile.value')
-          echo ::set-output name=initialMembersFile::$(echo $jsonInput | jq -r '.initialMembersFile.value')
+          initialBalancesFile=$(echo $jsonInput | jq -r '.initialBalancesFile.value')
+          initialMembersFile=$(echo $jsonInput | jq -r '.initialMembersFile.value')
+          if [ -z "$initialBalancesFile" ]
+          then
+            echo ::set-output name=initialBalancesFilePath::''
+          else
+            wget initialBalancesFile -O initial-balances.json
+            echo ::set-output name=initialBalancesFilePath::'initial-balances.json'
+          fi
+          if [ -z "$initialMembersFile" ]
+          then
+            echo ::set-output name=initialMembersFilePath::''
+          else
+            wget initialMembersFile -O initial-members.json
+            echo ::set-output name=initialMembersFilePath::'initial-members.json'
+          fi
 
       - name: Install Ansible dependencies
         run: pipx inject ansible-core boto3 botocore
@@ -47,18 +61,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-
-      - name: Download initial balances file
-        if: steps.myoutputs.outputs.initialBalancesFile != ''
-        run: |
-          wget ${{ steps.myoutputs.outputs.initialBalancesFile }} -O initial-balances.json
-          ls -al .
-
-      - name: Download initial members file
-        if: steps.myoutputs.outputs.initialMembersFile != ''
-        run: |
-          wget ${{ steps.myoutputs.outputs.initialMembersFile }} -O initial-members.json
-          ls -al .
 
       - name: Deploy to AWS CloudFormation
         uses: aws-actions/aws-cloudformation-github-deploy@v1
@@ -133,7 +135,8 @@ jobs:
                           git_repo=${{ steps.myoutputs.outputs.gitRepo }} deployment_type=live \
                           bucket_name=${{ steps.deploy_stack.outputs.S3BucketName }} \
                           branch_name=${{ steps.myoutputs.outputs.branchName }} \
-                          initial_members_file=initial-members.json initial_balances_file=initial-balances.json"
+                          initial_members_file=${{ steps.myoutputs.outputs.initialMembersFilePath }} \
+                          initial_balances_file=${{ steps.myoutputs.outputs.initialBalancesFilePath }}"
 
       - name: Save the output as an artifact
         uses: actions/upload-artifact@v2
