--- a/.github/workflows/deploy-node-network.yml
+++ b/.github/workflows/deploy-node-network.yml
@@ -41,14 +41,14 @@ jobs:
           then
             echo ::set-output name=initialBalancesFilePath::''
           else
-            wget initialBalancesFile -O initial-balances.json
+            wget $initialBalancesFile -O initial-balances.json
             echo ::set-output name=initialBalancesFilePath::'initial-balances.json'
           fi
           if [ -z "$initialMembersFile" ]
           then
             echo ::set-output name=initialMembersFilePath::''
           else
-            wget initialMembersFile -O initial-members.json
+            wget $initialMembersFile -O initial-members.json
             echo ::set-output name=initialMembersFilePath::'initial-members.json'
           fi
 
