--- a/.github/workflows/network-tests.yml
+++ b/.github/workflows/network-tests.yml
@@ -1,8 +1,8 @@
-name: storage-node
+name: network-tests
 on: [pull_request, push]
 
 jobs:
-  storage_node_build_ubuntu:
+  network_build_ubuntu:
     name: Ubuntu Checks
     runs-on: ubuntu-latest
     strategy:
@@ -19,10 +19,10 @@ jobs:
         yarn install --frozen-lockfile
         yarn workspace @joystream/types build
         yarn workspace @joystream/metadata-protobuf build
-        yarn workspace storage-node lint --quiet
-        yarn workspace storage-node build
+        yarn workspace @joystream/cli build
+        yarn workspace network-tests checks --quiet
 
-  storage_node_build_osx:
+  network_build_osx:
     name: MacOS Checks
     runs-on: macos-latest
     strategy:
@@ -39,5 +39,5 @@ jobs:
         yarn install --frozen-lockfile --network-timeout 120000
         yarn workspace @joystream/types build
         yarn workspace @joystream/metadata-protobuf build
-        yarn workspace storage-node lint --quiet
-        yarn workspace storage-node build
+        yarn workspace @joystream/cli build
+        yarn workspace network-tests checks --quiet
