--- a/.github/workflows/deploy-node-network.yml
+++ b/.github/workflows/deploy-node-network.yml
@@ -25,7 +25,13 @@ jobs:
       - name: Set env variables
         id: myoutputs # set the outputs
         run: |
-          jsonInput='${{ github.event.inputs.jsonInput }}'
+          # export ENCRYPTION_KEY=$(jq -r '.inputs.jsonInput.encryptionKey.value' $GITHUB_EVENT_PATH)
+          # echo "subject=$SUBJECT" >> $GITHUB_ENV; echo "::add-mask::$SUBJECT"
+          # jsonInput='${{ github.event.inputs.jsonInput }}'
+          jsonInput=$(jq -r '.inputs.jsonInput' $GITHUB_EVENT_PATH)
+          export ENCRYPTION_KEY=$(echo $jsonInput | jq -r '.encryptionKey.value')
+          echo ::set-output name=encryptionKey::$ENCRYPTION_KEY
+          echo "::add-mask::$ENCRYPTION_KEY"
           echo ::set-output name=gitRepo::$(echo $jsonInput | jq -r '.gitRepo.value')
           echo ::set-output name=branchName::$(echo $jsonInput | jq -r '.branchName.value')
           echo ::set-output name=keyName::$(echo $jsonInput | jq -r '.keyName.value')
@@ -36,7 +42,6 @@ jobs:
           echo ::set-output name=ec2AMI::$(echo $jsonInput | jq -r '.ec2AMI.value')
           echo ::set-output name=networkSuffix::$(echo $jsonInput | jq -r '.networkSuffix.value')
           echo ::set-output name=deploymentType::$(echo $jsonInput | jq -r '.deploymentType.value')
-          echo ::set-output name=encryptionKey::$(echo $jsonInput | jq -r '.encryptionKey.value')
           initialBalancesFile=$(echo $jsonInput | jq -r '.initialBalancesFile.value')
           initialMembersFile=$(echo $jsonInput | jq -r '.initialMembersFile.value')
           if [ -z "$initialBalancesFile" ]
@@ -53,93 +58,95 @@ jobs:
             wget $initialMembersFile -O initial-members.json
             echo ::set-output name=initialMembersFilePath::'initial-members.json'
           fi
+          mkdir mydata
+          touch mydata/hello.txt
 
-      - name: Install Ansible dependencies
-        run: pipx inject ansible-core boto3 botocore
+      # - name: Install Ansible dependencies
+      #   run: pipx inject ansible-core boto3 botocore
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+      # - name: Configure AWS credentials
+      #   uses: aws-actions/configure-aws-credentials@v1
+      #   with:
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     aws-region: us-east-1
 
-      - name: Deploy to AWS CloudFormation
-        uses: aws-actions/aws-cloudformation-github-deploy@v1
-        id: deploy_stack
-        with:
-          name: ${{ env.STACK_NAME }}
-          template: devops/aws/cloudformation/infrastructure.yml
-          no-fail-on-empty-changeset: '1'
-          parameter-overrides: >-
-            KeyName=${{ steps.myoutputs.outputs.keyName }},
-            ValidatorEC2InstanceType=${{ steps.myoutputs.outputs.validatorInstanceType }},
-            RPCEC2InstanceType=${{ steps.myoutputs.outputs.rpcInstanceType }},
-            BuildEC2InstanceType=${{ steps.myoutputs.outputs.buildInstanceType }},
-            EC2AMI=${{ steps.myoutputs.outputs.ec2AMI }},
-            NumberOfValidators=${{ steps.myoutputs.outputs.numberOfValidators }}
+      # - name: Deploy to AWS CloudFormation
+      #   uses: aws-actions/aws-cloudformation-github-deploy@v1
+      #   id: deploy_stack
+      #   with:
+      #     name: ${{ env.STACK_NAME }}
+      #     template: devops/aws/cloudformation/infrastructure.yml
+      #     no-fail-on-empty-changeset: '1'
+      #     parameter-overrides: >-
+      #       KeyName=${{ steps.myoutputs.outputs.keyName }},
+      #       ValidatorEC2InstanceType=${{ steps.myoutputs.outputs.validatorInstanceType }},
+      #       RPCEC2InstanceType=${{ steps.myoutputs.outputs.rpcInstanceType }},
+      #       BuildEC2InstanceType=${{ steps.myoutputs.outputs.buildInstanceType }},
+      #       EC2AMI=${{ steps.myoutputs.outputs.ec2AMI }},
+      #       NumberOfValidators=${{ steps.myoutputs.outputs.numberOfValidators }}
 
-      - name: Prepare inventory for Ansible
-        run: |
-          ASG=${{ steps.deploy_stack.outputs.AutoScalingId }}
+      # - name: Prepare inventory for Ansible
+      #   run: |
+      #     ASG=${{ steps.deploy_stack.outputs.AutoScalingId }}
 
-          VALIDATORS=""
+      #     VALIDATORS=""
 
-          INSTANCES=$(aws autoscaling describe-auto-scaling-instances \
-            --query "AutoScalingInstances[?AutoScalingGroupName=='${ASG}'].InstanceId" --output text);
+      #     INSTANCES=$(aws autoscaling describe-auto-scaling-instances \
+      #       --query "AutoScalingInstances[?AutoScalingGroupName=='${ASG}'].InstanceId" --output text);
 
-          for ID in $INSTANCES
-          do
-            IP=$(aws ec2 describe-instances --instance-ids $ID --query "Reservations[].Instances[].PublicIpAddress" --output text)
-            VALIDATORS+="$IP\n"
-          done
+      #     for ID in $INSTANCES
+      #     do
+      #       IP=$(aws ec2 describe-instances --instance-ids $ID --query "Reservations[].Instances[].PublicIpAddress" --output text)
+      #       VALIDATORS+="$IP\n"
+      #     done
 
-          echo -e "[build]\n${{ steps.deploy_stack.outputs.BuildPublicIp }}\n" >> inventory
-          echo -e "[validators]\n$VALIDATORS" >> inventory
-          echo -e "[rpc]\n${{ steps.deploy_stack.outputs.RPCPublicIp }}" >> inventory
-          cat inventory
+      #     echo -e "[build]\n${{ steps.deploy_stack.outputs.BuildPublicIp }}\n" >> inventory
+      #     echo -e "[validators]\n$VALIDATORS" >> inventory
+      #     echo -e "[rpc]\n${{ steps.deploy_stack.outputs.RPCPublicIp }}" >> inventory
+      #     cat inventory
 
-      - name: Run playbook to compile joystream-node on build server
-        uses: dawidd6/action-ansible-playbook@v2
-        if: steps.myoutputs.outputs.ec2AMI == ''
-        with:
-          playbook: build-code.yml
-          directory: devops/aws
-          requirements: requirements.yml
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          options: |
-            --inventory inventory
-            --extra-vars "branch_name=${{ steps.myoutputs.outputs.branchName }} \
-                          git_repo=${{ steps.myoutputs.outputs.gitRepo }} data_path=mydata"
+      # - name: Run playbook to compile joystream-node on build server
+      #   uses: dawidd6/action-ansible-playbook@v2
+      #   if: steps.myoutputs.outputs.ec2AMI == ''
+      #   with:
+      #     playbook: build-code.yml
+      #     directory: devops/aws
+      #     requirements: requirements.yml
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     options: |
+      #       --inventory inventory
+      #       --extra-vars "branch_name=${{ steps.myoutputs.outputs.branchName }} \
+      #                     git_repo=${{ steps.myoutputs.outputs.gitRepo }} data_path=mydata"
 
-      - name: Run playbook to install additional utils on build server
-        uses: dawidd6/action-ansible-playbook@v2
-        if: steps.myoutputs.outputs.ec2AMI == ''
-        with:
-          playbook: setup-admin.yml
-          directory: devops/aws
-          requirements: requirements.yml
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          options: |
-            --inventory inventory
+      # - name: Run playbook to install additional utils on build server
+      #   uses: dawidd6/action-ansible-playbook@v2
+      #   if: steps.myoutputs.outputs.ec2AMI == ''
+      #   with:
+      #     playbook: setup-admin.yml
+      #     directory: devops/aws
+      #     requirements: requirements.yml
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     options: |
+      #       --inventory inventory
 
-      - name: Run playbook to configure chain-spec and pioneer
-        uses: dawidd6/action-ansible-playbook@v2
-        with:
-          playbook: chain-spec-pioneer.yml
-          directory: devops/aws
-          requirements: requirements.yml
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          options: |
-            --inventory inventory
-            --extra-vars "network_suffix=${{ steps.myoutputs.outputs.networkSuffix }} data_path=mydata \
-                          number_of_validators=${{ steps.myoutputs.outputs.numberOfValidators }} \
-                          git_repo=${{ steps.myoutputs.outputs.gitRepo }} \
-                          deployment_type=${{ steps.myoutputs.outputs.deploymentType }} \
-                          bucket_name=${{ steps.deploy_stack.outputs.S3BucketName }} \
-                          branch_name=${{ steps.myoutputs.outputs.branchName }} \
-                          initial_members_file=${{ steps.myoutputs.outputs.initialMembersFilePath }} \
-                          initial_balances_file=${{ steps.myoutputs.outputs.initialBalancesFilePath }}"
+      # - name: Run playbook to configure chain-spec and pioneer
+      #   uses: dawidd6/action-ansible-playbook@v2
+      #   with:
+      #     playbook: chain-spec-pioneer.yml
+      #     directory: devops/aws
+      #     requirements: requirements.yml
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     options: |
+      #       --inventory inventory
+      #       --extra-vars "network_suffix=${{ steps.myoutputs.outputs.networkSuffix }} data_path=mydata \
+      #                     number_of_validators=${{ steps.myoutputs.outputs.numberOfValidators }} \
+      #                     git_repo=${{ steps.myoutputs.outputs.gitRepo }} \
+      #                     deployment_type=${{ steps.myoutputs.outputs.deploymentType }} \
+      #                     bucket_name=${{ steps.deploy_stack.outputs.S3BucketName }} \
+      #                     branch_name=${{ steps.myoutputs.outputs.branchName }} \
+      #                     initial_members_file=${{ steps.myoutputs.outputs.initialMembersFilePath }} \
+      #                     initial_balances_file=${{ steps.myoutputs.outputs.initialBalancesFilePath }}"
 
       - name: Encrpyt the artifacts
         run: |
