--- a/.github/workflows/deploy-node-network.yml
+++ b/.github/workflows/deploy-node-network.yml
@@ -27,9 +27,8 @@ jobs:
         run: |
           jsonInput=$(jq -r '.inputs.jsonInput' $GITHUB_EVENT_PATH)
           export ENCRYPTION_KEY=$(echo $jsonInput | jq -r '.encryptionKey.value')
-          echo $ENCRYPTION_KEY
           echo ::set-output name=encryptionKey::$ENCRYPTION_KEY
-          # echo "encryptionKey=$ENCRYPTION_KEY" >> $GITHUB_ENV; echo "::add-mask::$ENCRYPTION_KEY"
+          echo "::add-mask::$ENCRYPTION_KEY"
           echo ::set-output name=gitRepo::$(echo $jsonInput | jq -r '.gitRepo.value')
           echo ::set-output name=branchName::$(echo $jsonInput | jq -r '.branchName.value')
           echo ::set-output name=keyName::$(echo $jsonInput | jq -r '.keyName.value')
